--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "ajv": "^8.0.0",
+    "firebase": "^11.6.1",
+    "react": "18.0.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "18.0.0",
+    "react-router-dom": "^7.5.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
+    "react-usa-map": "^1.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
