--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@mui/material": "^7.0.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.0.0",
     "firebase": "^11.6.1",
+    "pdfjs-dist": "^5.2.133",
     "react": "18.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.0.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
     "react-usa-map": "^1.5.0",
+    "styled-components": "^6.1.17",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
