--- a/functions/package.json
+++ b/functions/package.json
@@ -15,10 +15,14 @@
   "main": "index.js",
   "dependencies": {
     "@stdlib/array": "^0.3.3",
+    "axios": "^1.9.0",
     "debug": "^4.4.0",
+    "dotenv": "^16.5.0",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "inflight": "^1.0.6",
+    "openai": "^4.97.0",
+    "pdfreader": "^3.0.7",
     "rimraf": "^6.0.1"
   },
   "devDependencies": {
