--- a/package.json
+++ b/package.json
@@ -10,18 +10,26 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.0.0",
+    "axios": "^1.9.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.6.1",
+    "firebase-admin": "^13.3.0",
+    "fuse": "^0.12.1",
+    "fuse.js": "^7.1.0",
     "pdfjs-dist": "^5.2.133",
     "react": "18.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.0.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
     "react-usa-map": "^1.5.0",
     "styled-components": "^6.1.17",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "worker-loader": "^3.0.8",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
